# Tabula

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  tabula.toml.example
compiler/: Cargo.toml
compiler/src/: lib.rs  main.rs
compiler/src/ast/: mod.rs
compiler/src/codegen/: mod.rs
compiler/src/lexer/: mod.rs
compiler/src/parser/: mod.rs
compiler/src/typechecker/: mod.rs
compiler/src/wasm/: mod.rs
debugger/: Cargo.toml
debugger/src/: main.rs
docgen/: Cargo.toml
docgen/src/: main.rs
docs/: compiler-architecture.md  grammar.md  syntax-guide.md  tools.md
examples/: arithmetic.tab  conditionals.tab  functions.tab  hello.tab  loops.tab  test_example.tab  variables.tab
linter/: Cargo.toml
linter/src/: main.rs
lsp/: Cargo.toml
lsp/src/: main.rs
profiler/: Cargo.toml
profiler/src/: main.rs
repl/: Cargo.toml
repl/src/: main.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  value.rs  vm.rs
std/: Cargo.toml
std/src/: async_rt.rs  collections.rs  http.rs  io.rs  lib.rs  math.rs  strings.rs
tabpm/: Cargo.toml
tabpm/src/: main.rs
test-framework/: Cargo.toml
test-framework/src/: main.rs
tools/: benchmark.rs
