[workspace]
members = [
    "compiler",
    "runtime",
    "std",
    "lsp",
    "tabpm",
    "repl",
    "test-framework",
    "debugger",
    "linter",
    "profiler",
    "docgen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mehmet T. AKALIN"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"

# LLVM bindings
inkwell = { version = "0.4", default-features = false, features = ["llvm15-0"] }

# WASM
wasmtime = "18.0"
wat = "1.0"

# Utilities
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LSP
tower-lsp = "0.20"
lsp-types = "0.94"

# Async
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP for package manager
reqwest = { version = "0.11", features = ["json"] }

# Terminal UI
crossterm = "0.27"
ratatui = "0.25"

# Testing
criterion = "0.5"

# Regex
regex = "1.10"

# Time
chrono = "0.4"

