[package]
name = "tabula-docgen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tabula-compiler = { path = "../compiler" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "tabula-doc"
path = "src/main.rs"

