[package]
name = "tabula-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tabula-compiler = { path = "../compiler" }
tabula-runtime = { path = "../runtime" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "tabula-test"
path = "src/main.rs"

